--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -126,13 +126,13 @@
         <li class="site-process-list__item">
           <h3 class="site-process-list__heading">Request access to the pilot</h3>
           <div class="site-process-list__body">
-            <p>Do this on the <%= link_to "Request access page", new_registration_path(User) %>. Remember, this is a pilot and and the process may move slowly. You can prepare for connection by asking your software developer to read the <%= link_to "developer documentation", docs_path %>.</p>
+            <p>Do this on the <%= link_to "Request access page", new_registration_path(User) %>.</p>
           </div>
         </li>
         <li class="site-process-list__item">
-          <h3 class="site-process-list__heading">We’ll reach out to you</h3>
+          <h3 class="site-process-list__heading">You will receive an email</h3>
           <div class="site-process-list__body">
-            <p>Based on the specification and sample data, build and test with synthetic data.</p>
+            <p>Within 1 - 2 business days, you will receive an email with instructions on how to access the synthetic (test data) sandbox.</p>
           </div>
         </li>
         <li class="site-process-list__item">
@@ -144,7 +144,7 @@
         <li class="site-process-list__item">
           <h3 class="site-process-list__heading">Provide a demo</h3>
           <div class="site-process-list__body">
-            <p>The Data at the Point of Care team will review your implementation to determine whether you’re ready for production.</p>
+            <p>The Data at the Point of Care team will review your implementation to determine whether you’re ready for production. Remember, this is a pilot process that will move slowly. </p>
           </div>
         </li>
         <li class="site-process-list__item">
