--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -41,15 +41,26 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
     <!-- Use the accurate heading level to maintain the document outline -->
     <h2 class="usa-accordion__heading">
       <button class="usa-accordion__button" aria-expanded="false" aria-controls="a3">
-        How will the pilot project work? How many providers can join and how long does it last?
+        How will the pilot work? How many providers can join and how long does it last?
       </button>
     </h2>
     <div id="a3" class="usa-accordion__content">
       <ul>
-        <li>After the announcement, any FFS provider can request access access to synthetic data.</li>
-        <li>CMS will slowly roll out the tokens to providers based on order of request, their readiness, their experience with FHIR, claims data, Blue Button and BCDA, and our ability to respond.</li>
-        <li>The team is aiming for a September test with a few providers who are have built, tested, and can demonstrate their readiness to test with production data.</li>
-        <li>CMS will slowly roll out the tokens to these providers based on readiness and the team's ability to respond.</li>
+        <li>Any FFS provider can request access access to synthetic data</li>
+        <li>Providers will receive an email with instructions on how to access the synthetic (test data) sandbox. This usually happens in 1 - 2 business days after the request.</li>
+        <li>The provider and/or their vendor develops and tests the functionality in the synthetic sandbox.</li>
+        <li>When the provider/vendor feel that they are ready to request production access, they can email <a href="mailto:DPCInfo@cms.hhs.gov">DPCInfo@cms.hhs.gov</a> and include the following:
+          <ul>
+            <li>Summary of the rostering process</li>
+            <li>HITRUST validation or certification (or be prepared to share the HHS ONC HIT Technology certification information for the version you are using, including the CHPL ID and version)</li>
+            <li>Confirmation of understanding the Terms of Service</li>
+            <li>The initial providers NPIs for production use</li>
+          </ul>
+        </li>
+        <li>The DPC team will schedule a demo session.  Remember, this is a pilot project and scheduling will move slowly.</li>
+        <li>Provider and their vendor will demonstrate the functionality and review the implementation decisions with the DPC team. </li>
+        <li>The DPC team provides production access and gets feedback as the solution is implemented.</li>
+        <li>There is not a limit to the number of providers who can test in the sandbox or who can go into production. However, the production access will move very slowly and may discontinue if the pilot is not successful.</li>
       </ul>
     </div>
 
@@ -203,7 +214,11 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
     </h2>
     <div id="a15" class="usa-accordion__content">
       <ul>
-        <li>CMS will slowly roll out the tokens to providers based on order of request, their readiness, their experience with FHIR, claims data, Blue Button and BCDA, and our ability to respond.</li>
+        <li>Within 1 - 2 business days of your request, you will receive an email with instructions on how to access the synthetic (or test data) sandbox.</li>
+        <li>Once you have a working solution that has been well tested, email <a href="mailto:DPCInfo@cms.hhs.gov">DPCInfo@cms.hhs.gov</a> to request a demo.</li>
+        <li>The DPC team will schedule a demo session.  Remember, this is a pilot project and scheduling will move slowly.</li>
+        <li>Provider and their vendor demonstrate the functionality and review the implementation decisions with the DPC team. </li>
+        <li>The DPC team provides production access and gets feedback as the solution is implemented.</li>
         <li>Updates will be posted to the <a href="https://groups.google.com/d/forum/dpc-api">Google Group</a> as CMS progresses through the pilot process.</li>
       </ul>
     </div>
