update the welcome text

--- a/dpc-web/app/views/dashboard/_assigned_content.html.erb
+++ b/dpc-web/app/views/dashboard/_assigned_content.html.erb
@@ -1,4 +1,4 @@
-<p class="ds-text--lead ds-u-measure--wide ds-u-margin-top--2">Welcome to the Data at the Point of Care Pilot. You have been assigned to the organizations below to start using the APIs in a synthetic, or test, sandbox.</p>
+<p class="ds-text--lead ds-u-measure--wide ds-u-margin-top--2">Welcome to the Data at the Point of Care Pilot. You have been assigned to the organizations below to start using the APIs in a synthetic, or test, sandbox. <strong>Remember</strong>, do NOT add any real patient information to the sandbox environment. </p>
 
 <div class="ds-l-row--12">
 
