remove duplicate word

--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -46,7 +46,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
     </h2>
     <div id="a3" class="usa-accordion__content">
       <ul>
-        <li>Any FFS provider can request access access to synthetic data</li>
+        <li>Any FFS provider can request access to synthetic data</li>
         <li>Providers will receive an email with instructions on how to access the synthetic (test data) sandbox. This usually happens in 1 - 2 business days after the request.</li>
         <li>The provider and/or their vendor develops and tests the functionality in the synthetic sandbox.</li>
         <li>When the provider/vendor feel that they are ready to request production access, they can email <a href="mailto:DPCInfo@cms.hhs.gov">DPCInfo@cms.hhs.gov</a> and include the following:
