--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -58,7 +58,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
           </ul>
         </li>
         <li>The DPC team will schedule a demo session.  Remember, this is a pilot project and scheduling will move slowly.</li>
-        <li>Provider and their vendor will demonstrate the functionality and review the implementation decisions with the DPC team. </li>
+        <li>The provider and their vendor will demonstrate the functionality and review the implementation decisions with the DPC team. </li>
         <li>The DPC team provides production access and gets feedback as the solution is implemented.</li>
         <li>There is not a limit to the number of providers who can test in the sandbox or who can go into production. However, the production access will move very slowly and may discontinue if the pilot is not successful.</li>
       </ul>
@@ -217,7 +217,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
         <li>Within 1 - 2 business days of your request, you will receive an email with instructions on how to access the synthetic (or test data) sandbox.</li>
         <li>Once you have a working solution that has been well tested, email <a href="mailto:DPCInfo@cms.hhs.gov">DPCInfo@cms.hhs.gov</a> to request a demo.</li>
         <li>The DPC team will schedule a demo session.  Remember, this is a pilot project and scheduling will move slowly.</li>
-        <li>Provider and their vendor demonstrate the functionality and review the implementation decisions with the DPC team. </li>
+        <li>The provider and their vendor demonstrate the functionality and review the implementation decisions with the DPC team. </li>
         <li>The DPC team provides production access and gets feedback as the solution is implemented.</li>
         <li>Updates will be posted to the <a href="https://groups.google.com/d/forum/dpc-api">Google Group</a> as CMS progresses through the pilot process.</li>
       </ul>
