add from the provider

--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -59,7 +59,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
         </li>
         <li>The DPC team will schedule a demo session.  Remember, this is a pilot project and scheduling will move slowly.</li>
         <li>The provider and their vendor will demonstrate the functionality and review the implementation decisions with the DPC team. </li>
-        <li>The DPC team provides production access and gets feedback as the solution is implemented.</li>
+        <li>The DPC team provides production access and gets feedback from the provider as the solution is implemented.</li>
         <li>There is not a limit to the number of providers who can test in the sandbox or who can go into production. However, the production access will move very slowly and may discontinue if the pilot is not successful.</li>
       </ul>
     </div>
