--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -218,7 +218,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
         <li>Once you have a working solution that has been well tested, email <a href="mailto:DPCInfo@cms.hhs.gov">DPCInfo@cms.hhs.gov</a> to request a demo.</li>
         <li>The DPC team will schedule a demo session.  Remember, this is a pilot project and scheduling will move slowly.</li>
         <li>The provider and their vendor demonstrate the functionality and review the implementation decisions with the DPC team. </li>
-        <li>The DPC team provides production access and gets feedback as the solution is implemented.</li>
+        <li>The DPC team provides production access and gets feedback from the provider as the solution is implemented.</li>
         <li>Updates will be posted to the <a href="https://groups.google.com/d/forum/dpc-api">Google Group</a> as CMS progresses through the pilot process.</li>
       </ul>
     </div>
