Fix dashboard feature test

--- a/dpc-web/app/views/dashboard/_assigned_content.html.erb
+++ b/dpc-web/app/views/dashboard/_assigned_content.html.erb
@@ -109,7 +109,7 @@
           <h3 class="box__heading"><%= organization.name %> is almost ready!</h3>
         </div>
         <p class="ds-text--lead ds-u-measure--wide">
-         Before this organization can add credentials for sandbox testing, you need to designate an organizational NPI and vendor by <%= link_to "editing the organization", edit_organization_url(organization), class: "", data: { test: "edit-link" } %>.
+         Before this organization can add credentials for sandbox testing, you need to designate an organizational NPI and vendor by <%= link_to "editing the organization", edit_organization_url(organization) %>.
         </p>
       </div>
     </section>
