updated description of written summary

--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -51,7 +51,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
         <li>The provider and/or their vendor develops and tests the functionality in the synthetic sandbox.</li>
         <li>When the provider/vendor feel that they are ready to request production access, they can email <a href="mailto:DPCInfo@cms.hhs.gov">DPCInfo@cms.hhs.gov</a> and include the following:
           <ul>
-            <li>Summary of the rostering process</li>
+            <li>Written summary of the rostering process and logic of how patients are added and removed from rosters and when physician intervention is required to renew an expired roster</li>
             <li>HITRUST validation or certification (or be prepared to share the HHS ONC HIT Technology certification information for the version you are using, including the CHPL ID and version)</li>
             <li>Confirmation of understanding the Terms of Service</li>
             <li>The initial providers NPIs for production use</li>
