Vendors may have 0 providers

--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -54,7 +54,7 @@
           %>
           <div class="field field--follow-up" hidden>
             <%= f.label :requested_num_providers, class: "ds-c-label" do %>
-            Number of Providers at Your Organization (optional)
+            Number of Providers at Your Organization
             <span class="ds-c-field__hint">You may use an approximate number.</span>
             <% end %>
             <%= f.number_field :requested_num_providers, value: '', min: 0, class: "ds-c-field ds-c-field--small" %>
