--- a/dpc-web/app/assets/stylesheets/components/_buttons.scss
+++ b/dpc-web/app/assets/stylesheets/components/_buttons.scss
@@ -49,7 +49,8 @@
 }
 
 
-.utility-button {
+.utility-button,
+.utility-button:visited {
   align-items: center;
   background: $color-gray-lightest;
   border: 1px solid $color-gray-light;
