--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -234,6 +234,8 @@ http://hl7.org/fhir/us/bulkdata/2019May/index.html">Bulk FHIR specification</a>.
 
       <style>.codegena{position:relative;width:100%;height:0;padding-bottom:56.27198%;}.codegena iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="codegena"><iframe width='500' height='294' src="https://www.youtube.com/embed/zIwphPlI9RA?&theme=dark&autohide=2&modestbranding=1&rel=0&iv_load_policy=3&showinfo=0&showtitle=0"frameborder="0"></iframe></div>
 
+      <button class="ds-c-button ds-c-button--transparent ds-c-dialog__close ds-u-color--white ds-u-visibility--screen-reader" aria-label="Close modal dialog">Close</button>
+
 
   </div>
 </div>
