--- a/dpc-web/app/views/public/_hero.html.erb
+++ b/dpc-web/app/views/public/_hero.html.erb
@@ -8,6 +8,7 @@
           <div class="ds-text--lead">
             As patients move throughout the healthcare system, providers often struggle to gain and maintain a complete picture of their medical history. Data at the Point of Care fills in the gaps with claims data to inform providers with secure, structured patient history, past procedures, medication adherence, and more.
           </div>
+
         </div>
         <div class="ds-u-margin-top--7">
           <% unless user_signed_in? %>
@@ -18,11 +19,14 @@
           Request access</a>
           <% end %>
 
-          <%= link_to docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" do %>
+          <button type="button" id="filter-modal-trigger" class="ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" data-modal-show="filter-modal">
             <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-              <use xlink:href="/assets/solid.svg#code"></use>
-            </svg>Documentation
-          <% end %>
+              <use xlink:href="/assets/solid.svg#play"></use>
+            </svg>Watch the video
+          </button>
+
+
+
         </div>
 
         <p class="ds-u-margin-top--5">Note: Data at the Point of Care is currently a pilot program from CMS. <a href="#about-the-pilot">Learn more</a></p>
