Show num provider field if user registration fails
This field is shown with JavaScript when the select menu changes. This
PR adds JavaScript that checks to see if the seelct menu has an option
already selected on page load that indicates that the num providers
field should be shown, and triggers that change if so.

This also changes the min of the num provider fields back to 0. I had
changed it to 1 in a previous pull request, but if the field's min is 1,
then health it vendors can never get past registration because even
though the field is hidden, it is still validating that the input is at
least 1.

--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -57,7 +57,7 @@
             Number of Providers at Your Organization
             <span class="ds-c-field__hint">You may use an approximate number.</span>
             <% end %>
-            <%= f.number_field :requested_num_providers, value: '', min: 1, class: "ds-c-field ds-c-field--small" %>
+            <%= f.number_field :requested_num_providers, min: 0, class: "ds-c-field ds-c-field--small" %>
           </div>
         </div>
 
