--- a/dpc-web/app/views/internal/organizations/index.html.erb
+++ b/dpc-web/app/views/internal/organizations/index.html.erb
@@ -14,7 +14,7 @@
       Create new organization
     <% end %>
 
-    <h1 class="ds-h1">Viewing <strong><%= @organizations.total_count %></strong> provider organizations</h1>
+    <h1 class="ds-h1"><%= internal_orgs_header(@organizations.total_count) %></h1>
     <p class=""><%= page_entries_info @organizations %></p>
     <%= form_tag internal_organizations_path, method: "get", class: "ds-u-display--flex" do %>
       <%= text_field_tag :keyword, params[:keyword], placeholder: "name", class: "ds-c-field ds-u-margin--0" %>
