--- a/dpc-web/app/views/shared/internal/_sidenav.html.erb
+++ b/dpc-web/app/views/shared/internal/_sidenav.html.erb
@@ -11,27 +11,47 @@
 
 <ul class="ds-c-vertical-nav">
   <li class="ds-c-vertical-nav__item usa-accordion">
-    <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent <%= current_sidenav_class?(:users, current) %> <%= current_sidenav_class?(:organizations, current) %>" aria-controls="nav-providers-main" aria-expanded="true">
-    Providers
+    <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent <%= current_sidenav_class if users_page? %>" aria-controls="nav-users-main" aria-expanded="true">
+      Users
     </button>
-    <ul id="nav-providers-main" class="ds-c-vertical-nav__subnav">
+    <ul id="nav-users-main" class="ds-c-vertical-nav__subnav">
+      <li class="ds-c-vertical-nav__item">
+        <%= link_to "All", internal_users_path(org_type: 'all'), class: "ds-c-vertical-nav__label #{current_sidenav_class if all_users_page?}" %>
+      </li>
       <li class="ds-c-vertical-nav__item usa-accordion">
-        <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent <%= current_sidenav_class?(:users, current) %>" aria-controls="provider-users" aria-expanded="true">
-        Users
+        <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent <%= current_sidenav_class if provider_users_page? %>" aria-controls="provider-users" aria-expanded="true">
+          Provider
         </button>
         <ul id="provider-users" class="ds-c-vertical-nav__subnav" aria-hidden="false">
           <li class="ds-c-vertical-nav__item">
-            <%= link_to "All users", internal_users_path, class: "ds-c-vertical-nav__label #{current_sidenav_class?(:users,  params[:org_status] || current)}" %>
-          </li>
-          <li class="ds-c-vertical-nav__item">
-            <%= link_to internal_users_path(org_status: "unassigned"), class: "ds-c-vertical-nav__label #{current_sidenav_class?(:unassigned, params[:org_status] || current)}" do %>
+            <%= link_to internal_users_path(org_status: "unassigned", org_type: "provider"), class: "ds-c-vertical-nav__label #{current_sidenav_class if unassigned_provider_users_page?}" do %>
               <span>
                 Unassigned users
               </span>
             <% end %>
           </li>
           <li class="ds-c-vertical-nav__item">
-            <%= link_to internal_users_path(org_status: "assigned"), class: "ds-c-vertical-nav__label #{current_sidenav_class?(:assigned,  params[:org_status] || current)}" do %>
+            <%= link_to internal_users_path(org_status: "assigned", org_type: "provider"), class: "ds-c-vertical-nav__label #{current_sidenav_class if assigned_provider_users_page?}" do %>
+              <span>
+                Assigned users
+              </span>
+            <% end %>
+          </li>
+        </ul>
+
+        <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent <%= current_sidenav_class if vendor_users_page? %>" aria-controls="vendor-users" aria-expanded="true">
+          Vendor
+        </button>
+        <ul id="vendor-users" class="ds-c-vertical-nav__subnav" aria-hidden="false">
+          <li class="ds-c-vertical-nav__item">
+            <%= link_to internal_users_path(org_status: "unassigned", org_type: "vendor"), class: "ds-c-vertical-nav__label #{current_sidenav_class if unassigned_vendor_users_page?}" do %>
+              <span>
+                Unassigned users
+              </span>
+            <% end %>
+          </li>
+          <li class="ds-c-vertical-nav__item">
+            <%= link_to internal_users_path(org_status: "assigned", org_type: "vendor"), class: "ds-c-vertical-nav__label #{current_sidenav_class if assigned_vendor_users_page?}" do %>
               <span>
                 Assigned users
               </span>
@@ -39,34 +59,28 @@
           </li>
         </ul>
       </li>
-      <li class="ds-c-vertical-nav__item">
-        <%= link_to "Organizations", internal_organizations_path, class: "ds-c-vertical-nav__label #{current_sidenav_class?(:organizations, current)}" %>
-      </li>
     </ul>
+
+    <li class="ds-c-vertical-nav__item usa-accordion">
+      <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent <%= current_sidenav_class if organizations_page? %>" aria-controls="nav-organizations-main" aria-expanded="true">
+        Organizations
+      </button>
+      <ul id="nav-organizations-main" class="ds-c-vertical-nav__subnav">
+        <li class="ds-c-vertical-nav__item">
+          <%= link_to "All", internal_organizations_path(org_type: "all"), class: "ds-c-vertical-nav__label #{current_sidenav_class if all_organizations_page?}" %>
+        </li>
+        <li class="ds-c-vertical-nav__item">
+          <%= link_to "Provider", internal_organizations_path(org_type: "provider"), class: "ds-c-vertical-nav__label #{current_sidenav_class if provider_organizations_page?}" %>
+        </li>
+        <li class="ds-c-vertical-nav__item">
+          <%= link_to "Vendor", internal_organizations_path(org_type: "vendor"), class: "ds-c-vertical-nav__label #{current_sidenav_class if vendor_organizations_page?}" %>
+        </li>
+      </ul>
+    </li>
   </li>
 
-  <li class="ds-c-vertical-nav__item  usa-accordion">
-    <button class="usa-accordion__button ds-c-vertical-nav__label ds-c-vertical-nav__label--parent" aria-controls="nav-vendors" aria-expanded="false">
-    Vendors
-    </button>
-    <ul id="nav-vendors" class="ds-c-vertical-nav__subnav" aria-hidden="true">
-      <li class="ds-c-vertical-nav__item">
-        <a href="#" class="ds-c-vertical-nav__label">
-          <span>
-            Users
-          </span>
-        </a>
-      </li>
-      <li class="ds-c-vertical-nav__item">
-        <a href="#" class="ds-c-vertical-nav__label">
-          <span>
-            Organizations
-          </span>
-        </a>
-      </li>
-    </ul>
-  </li>
+
   <li class="ds-c-vertical-nav__item">
-    <%= link_to "Tags", internal_tags_path, class: "ds-c-vertical-nav__label #{current_sidenav_class?(:tags, current)}" %>
+    <%= link_to "Tags", internal_tags_path, class: "ds-c-vertical-nav__label #{current_sidenav_class if tags_page?}" %>
   </li>
 </ul>
