--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -194,7 +194,7 @@
       </button>
     </h2>
     <div id="a13" class="usa-accordion__content">
-      <p>Yes! The emergency room scenario is a great use of claims data. When adding patients to the roster from an emergency room, the attribution time period will be 72 hours instead of the 90 days that occurs for outpatient visits.</p>
+      <p>Yes! The emergency room scenario is a great use of claims data. You can add patients to your roster as they are admitted to the emergency room.</p>
     </div>
 
     <h2 class="usa-accordion__heading">
