--- a/dpc-web/app/assets/stylesheets/settings/_variables.scss
+++ b/dpc-web/app/assets/stylesheets/settings/_variables.scss
@@ -17,6 +17,7 @@ $measuer-5:  77ch;
 
 // Breakpoints
 $width-nav: 860px;
+$width-flex-box: 487px;
 
 // Replace US WDS font stacks with HealthCare.gov font stacks
 $font-sans: 'Roboto', sans-serif;
