--- a/dpc-web/app/views/shared/_footer.html.erb
+++ b/dpc-web/app/views/shared/_footer.html.erb
@@ -12,6 +12,7 @@
         <ul class="ds-c-list ds-c-list--bare ds-u-font-size--small">
           <li><%= link_to "Documentation", docs_path %></li>
           <li><%= link_to "Frequently asked questions", faq_path %></li>
+          <li><%= link_to "Terms of Service", terms_of_service_path %></li>
           <li><a target="_blank" href="https://github.com/CMSgov/dpc-app">DPC on GitHub</a></li>
           <li><a target="_blank" href="https://groups.google.com/d/forum/dpc-api">DPC Google Group</a></li>
         </ul>
