--- a/dpc-web/app/views/public_keys/new.html.erb
+++ b/dpc-web/app/views/public_keys/new.html.erb
@@ -8,7 +8,7 @@
 
   </section>
 
-  <section class="box">
+  <section class="box box--flex">
     <div class="box__content">
       <p class="ds-text--lead">This key will be added for <strong><%= @organization.name %></strong>.</p>
 
@@ -30,6 +30,9 @@
 
         <%= submit_tag "Add key", class: "ds-c-button ds-c-button--primary", data: { test: "form-submit" } %>
       <% end %>
+    </div>
+    <div class="box__content box--flex">
+    ta da!
     </div>
   </section>
 </div>
